--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="styles.css">
-    <title>เว็บไซต์ทำนายยี่ห้อรถยนต์จากภาพรถยนต์</title>
+    <title>เว็บไซต์ทำนายลักษณะสถานที่จากภาพ</title>
 </head>
 <body>
     <div class="container">
-        <h2>ทำนายยี่ห้อของรูปภาพรถยนต์</h2>
+        <h2>ทำนายลักษณะสถานที่</h2>
         <div class="drop-area" ondragover="handleDragOver(event)" ondragleave="handleDragLeave(event)" ondrop="handleDrop(event)">
             <p class="drop-text">ลากและวางรูปภาพที่นี่</p>
             <label for="fileInput" class="upload-btn">หรือเลือกรูปภาพ</label>
